--- a/ENGR114-Labs/Lab04-Plotting_Tide_Data/ENGR114-Lab04-Plotting_Weather_Data.tex
+++ b/ENGR114-Labs/Lab04-Plotting_Tide_Data/ENGR114-Lab04-Plotting_Weather_Data.tex
@@ -1,6 +1,6 @@
-%% ENGR114_lab_assignment_rev2.tplx %%
+%% ENGR114_lab_assignment.tplx %%
 %
-% Built off of the article.tplx tempate %
+% Built off of the article.tplx template %
 
 
 % Default to the notebook output style
@@ -119,6 +119,11 @@
 \titleformat{\subsubsection}[hang]{\large\bfseries}{}{1em}{}
 \titlespacing{\subsubsection}{-1.1em}{1.5em}{0.8em}
     
+        \title{Problem Solving 101 with Python}
+        \author{Peter D. Kazarinoff, PhD}
+        \date{}
+    
+    
     
     % Colors for the hyperref package
     \definecolor{urlcolor}{rgb}{0,.145,.698}
@@ -192,7 +197,11 @@
     \def\gt{>}
     \def\lt{<}
     % Document parameters
-    \title{Notebook}
+    
+        \title{Problem Solving 101 with Python}
+        \author{Peter D. Kazarinoff, PhD}
+        \date{}
+    
     
     
     
