--- a/ENGR114-Labs/Lab02-Sifting_Weather_Data/Lab02-Sifting_Weather_Data.ipynb
+++ b/ENGR114-Labs/Lab02-Sifting_Weather_Data/Lab02-Sifting_Weather_Data.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Prelab\n",
     "\n",
-    "Complete Example 3.3 (p. 89) from the textbook.  Coding this example will help you with the lab assignment.  You can find the relevant .xlsx-file posted along with these lab instructions on D2L.  After completing Example 3.3, save your script in a Jupyter notebook.  Your work completing Example 3.3 does not need to be submitted for credit."
+    "You can find the relevant .xlsx-file posted along with these lab instructions on D2L.  After completing the in-class example, save your script as a Jupyter notebook.  Your work completing the in-class example does not need to be submitted for credit."
    ]
   },
   {
@@ -22,23 +22,22 @@
    "source": [
     "## Lab\n",
     "\n",
-    "Import the weather data from the from the ```weather\\_data.xls``` file into a Panda's dataframe called ```wdf```.  This time, the dataframe will contain a couple values equal to ```-99999```.  Transpose the data (as done in Example 3.3) so the data for each month is in columns.  Save the transposed dataframe to the varaiable ```df```. Complete these steps using the follwoing commands.\n",
+    "In this lab, you will be working with rainfall  data that is stored in an Excel file called ```weather_data.xlsx```. The Excel file contains the rainfall on different days of the year in hundredths of an inch. The rows of the Excel file represent months and the columns of the Excel file represent days. The data stored in the cells of the Excel file represent rainfall in hundredths of an inch.\n",
     "\n",
-    "```python\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "wdf = pd.read_excel('weather_data.xlsx', header=None)\n",
-    "df = wdf.transpose()\n",
-    "```"
+    "You will use Python to derive some meaningful statistics from the data."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Search the Pandas pacakge documentation help section to see how to use the ```pd.read_excel()``` function words and why we need the keyword argument ```header=None``` in this example.  \n",
+    "### Import External Packages\n",
     "\n",
-    "Note: the .xlsx-file must be in your current file path, and quotes need to surround the file name.  "
+    "The first step in the lab is to add a header to your Jupyter Notebook that includes the lab number and name, your name, the course, quarter and date. \n",
+    "\n",
+    "Below the header cell, you need to import **NumPy** and **Pandas**. These two external packages will be used in the lab. The standard alias ```np``` and ```pd``` should be used for NumPy and Pandas respectively.\n",
+    "\n",
+    "The Jupyter notebook code cell below shows the import lines."
    ]
   },
   {
@@ -48,7 +47,28 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save the weather data to a NumPy array\n",
+    "\n",
+    "The next step in the lab is to import the Excel file using Pandas and save the weather data to a NumPy array.\n",
+    "\n",
+    "Import the weather data from the ```weather_data.xls``` file into a Panda's dataframe called ```wdf```.  When first imported, the dataframe contains a couple values equal to ```-99999```.  Transpose the data (as done in Example 3.3) so the data for each month is in columns.  Save the transposed dataframe to the variable ```df```.\n",
+    "\n",
+    "The Jupyter notebook code cell below shows the steps to import the ```weather_data.xlsx``` file into a Pandas dataframe, then transpose the data frame and save as the variable ```df```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "wdf = pd.read_excel('weather_data.xlsx', header=None)\n",
     "df = wdf.transpose()"
    ]
@@ -57,12 +77,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Afterwards, running ```print(df.shape)``` will indicate the  dataframe ```df``` has dimensions of 31 rows x 12 columns.  Also check the value in row 0, column 3 in the dataframe is ```260``` by running the ```df.head()``` method. "
+    "Search the Pandas package documentation help section to see how to use the ```pd.read_excel()``` function and why we need the keyword argument ```header=None``` in this example.  \n",
+    "\n",
+    "Note: the .xlsx-file must be in your current file path, and quotes need to surround the file name.\n",
+    "\n",
+    "The Jupyter notebook code cell below shows the steps to import the ```weather_data.xlsx``` file into a Pandas dataframe, then transpose the data frame and save as the variable ```df```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Afterwards, running ```print(df.shape)``` will indicate the  dataframe ```df``` has dimensions of 31 rows x 12 columns.  Also check the value in row 0, column 3 in the dataframe is ```260``` by running the ```df.head()``` method. \n",
+    "\n",
+    "The code cell below completes these steps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +229,7 @@
        "4    0    0   0    0   5   0   0   0   0  156    0   0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,165 +243,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the following line to change all of the values in the ndataframe ```wd``` which are equal to ```-99999``` and set them to ```NaN``` (not a number).\n",
+    "Next, convert the Pandas dataframe ```df``` to a NumPy array called ```wd``` (for weather data). Use NumPy's ```np.array()``` function.\n",
     "\n",
-    "```\n",
-    "df[df==-99999]=np.nan\n",
-    "```\n",
-    "\n",
-    "Use the ```df.tail()``` method to view the last few rows in the dataframe. We see row 30, column 5 has the value ```NaN`` (not a number)."
+    "The Jupyter notebook code cell below demonstrates this functionality"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>78</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>0</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>138.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5</td>\n",
-       "      <td>86.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>33</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>33</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    0     1   2     3   4     5   6   7      8   9    10  11\n",
-       "26   0   0.0  78  35.0   2  35.0   0   0    6.0   0  2.0   0\n",
-       "27   0  62.0   0  13.0   0  14.0   5   0  138.0   0  0.0   0\n",
-       "28   0   NaN   5  86.0   0  14.0   0   0   58.0   0  0.0   0\n",
-       "29  33   NaN   8   0.0   0   8.0   0   0   10.0   0  0.0   0\n",
-       "30  33   NaN   0   NaN   0   NaN   0   0    NaN   1  NaN   0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df[df==-99999]=np.nan\n",
-    "df.tail()"
+    "wd = np.array(df)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By completing Example 3.3, you know the data in the excel file represents rainfall in _hundredths of an inch_, but for brevity's sake, this lab will treat the data as if it were rainfall in _inches_.  There is no need to change or scale the data before further processing.\n",
+    "You use Python's type function to verify the variable ```wd``` is a NumPy array. The code cell below will print ```wd```'s data type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(wd))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clean up the data\n",
     "\n",
-    "Define a variable called ```month``` and set it equal to ```1``` for now.  This will represent the month for which we will compute statistics.  Later, you will change ```month``` to other values.  ```0``` means January, ```1``` means February, and so on.\n",
+    "Multiply each value in the array by ```0.01``` so that the array contains rain fall in inched (not hundredths of an inch). Next, convert all the values in the array ```wd``` which are equal to ```-99999``` and set them to ```NaN``` (not a number). NumPy has a special ```NaN``` type which allows the location of the ```NaN``` value to stay in the array, but not figure into calculations. \n",
     "\n",
-    "Use the value in ```month``` to extract that month's data from your ```wd``` dataframe. Store these values in a new list called ```m```.  Because January has 31 days, you only see values in \\textbf{m} that are positive or zero (no values of -99999 ). Since February has 28 days, you will see positive numbers, zeros and ```NaN``` present in the list.\n",
+    "The code cell below shows how to convert the data to inches of rainfall and convert all the -99999 into NumPy's ```NaN``` data type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wdf=wd*0.01\n",
+    "wdf[wdf<0]=np.nan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define a month array and compute statistics\n",
     "\n",
-    "For example, according to our data, the rainfall for the first 3 days in January are 0 inches, 0 inches, and 272 inches.  The average rain fall per day in the first 3 days of January is 90.667.  The average rain fall for the days of January 2nd and 3rd is 136."
+    "Define a variable called ```month``` and set it equal to ```1``` for now (Month ```1``` is February, remember Python counting starts at 0).  ```month``` represents the month for which we will compute statistics.  Later, you will change ```month``` to other values.  ```0``` means January, ```1``` means February, and so on.\n",
+    "\n",
+    "Use the value in ```month``` to extract that month's data from your ```wd``` array. Store these values in a array called ```m```.  Since February has 28 days, you will see positive numbers, zeros and ```NaN``` present in the array.\n",
+    "\n",
+    "For example, according to our data, the rainfall for the first 3 days in January are 0 inches, 0 inches, and 2.72 inches."
    ]
   },
   {
@@ -389,66 +333,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18.392857142857142\n",
-      "135.0\n",
-      "17\n",
-      "1\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'd_nonzero' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-505b45a0237c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mnd_nonzero\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m>\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md_nonzero\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[0mdf_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'd_nonzero' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "m = 1\n",
-    "\n",
-    "m_avg = np.mean(df[m])\n",
-    "print(m_avg)\n",
-    "\n",
-    "m_max = np.max(df[m])\n",
-    "print(m_max)\n",
-    "\n",
-    "d_max = df.index[df[m] == m_max]\n",
-    "print(d_max[0])\n",
-    "\n",
-    "nd_zero = sum(df[m]==m_max)\n",
-    "print(nd_zero)\n",
-    "\n",
-    "nd_nonzero = sum(df[m]>0)\n",
-    "print(d_nonzero)\n",
-    "\n",
-    "df_list = list(df[m].values)\n",
-    "pos_rain_lst = [x for x in df_list if x>0 ]\n",
-    "np.mean(pos_rain_lst)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test all of your values for the month of January manually to make sure they are correct.\n",
+    "Test all of your values for the month of February manually to make sure they are correct.\n",
     "\n",
-    "Run your script for the February data (```m=1```) and check the results against manual calculations for that month.\n",
+    "Run your script for the January data (```m=0```) and check the results against manual calculations for that month.\n",
     "\n",
-    "You may wish to test your script against other month's data.  When you are convinced your results and variable names are correct, Restart the notebook Kernal and clear all output. Run each cell one last time and ensure the script is error free.\n",
+    "You may wish to test your script against other month's data.  When you are convinced your results and variable names are correct, Restart the notebook Kernel and clear all output. Run each cell one last time and ensure the script is error free.\n",
     "\n",
-    "For your own records, save your lab2.ipnb file and your ```weather_data.xlsx``` file to the same directory.  You do not need to submit your ```weather\\_data.xlsx``` file because your instructor will have their own copy to test your script."
+    "For your own records, save your lab2.ipynb file and your ```weather_data.xlsx``` file to the same directory.  You do not need to submit your ```weather_data.xlsx``` file because your instructor will have their own copy to test your script."
    ]
   },
   {
@@ -457,7 +351,7 @@
    "source": [
     "## Deliverable\n",
     "\n",
-    "One .ipynb-file with output all cells run. The .ipynb-file should run without errors. Uploaded the .ipynb file to D2L by the end of the lab period."
+    "One .ipynb-file with all cells run. The .ipynb-file should run without errors. Uploaded the .ipynb file to D2L by the end of the lab period."
    ]
   },
   {
